# GNX

./: CMakeLists.txt  README.md  premake5.lua
include/GNX/: GNX.h
src/: GNX.cpp  GNX_common.h
src/metal/: GNX_metal.m
src/vulkan/: GNX_vulkan.cpp  vk_mem_alloc.h  volk.c  volk.h
testGNX/: main.cpp
